plugins/groovy/testdata/highlighting/pre30/arrayInitializers.groovy
new int[] <error descr="Array initializers are not supported in current version">{}</error>
new int[0] {}
